--- a/whenwhere.cf/index.html
+++ b/whenwhere.cf/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <title>whenwhere.cf - Dead simple lightweight communication and coordination</title>
+<script>
+	if (window.location.protocol.substring(0,5) != "https" && window.location.hostname == "whenwhere.cf") {window.location.protocol = "https:"};
+</script>
+	<script src="hivejs.min.js"></script>
+	<script src="markdown.min.js"></script>
+	<script src="localmessages.js"></script>
 <meta name="viewport" content="initial-scale=1">
 <meta name="theme-color" value="white">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +20,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 div, #navinput {
 	font-family: 'Roboto Slab', sans-serif;
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
 #code {
 	font-size: 3em;
@@ -25,27 +31,31 @@ div, #navinput {
 #navinput {
 	width: 13ex;
 }
+.message {
+	margin: 1em;
+	padding: 1em;
+	border: dotted thin black;
+}
 </style>
 </head>
 <body>
-<div id="nowat">OLC for your location:</div>
+<div id="nowat">You are at:</div>
 <div id="code" onclick="share(this.title)"><span id="region">0000</span><wbr><span id="local">0000+00</span></div>
 <div id="accuracy">Please be patient. If this stays here too long, something is wrong.</div>
-<div id="nav"><span id="nav1">Enter destination OLC:<br /></span><input id="navinput" placeholder="go where?"><span id="nav2"><br />(they are also called Plus codes)</span></div>
-<p>Cannot find your friends at the party? Need help but nothing around you communicates reliably where you are? Internet really bad or non-existant? We got you covered! Communicate this code to e.g. your friends and they can find it with most mobile navigation apps (Google Apps, Maps.me, Mapy.cz, OSMAnd, this app...)! If you are close or you add a reference point close to you that people know how to find, the bold part of the code is usually enough!</p>
+<div id="nav"><span id="nav1">Go to:<br /></span><input id="navinput" placeholder="go where?"><span id="nav2"><br />(enter OLC)</span></div>
 <hr />
 <div id="more"><ul><li><a id="navapp" href="https://www.google.com/maps/@?api=1&map_action=map">Navigate with other app</a></li>
 		<li><a id="map" href="https://plus.codes/map/">Full map around the OLC</a></li>
 		<li>If someone is already close to you, it's enough to give just the bold part of the code. You can do a <a id="refhref" href="https://nominatim.openstreetmap.org/reverse.php?format=html&zoom=12">reverse lookup on Nominatim</a> to find out where you are close to, and use this to get people to the right region first.</li>
 		<li><a href="https://plus.codes">Get more information about Plus-codes</a></li>
 	</div>
-	<p>If the part after the + in your code changes all the time while you are standing still, your GPS is probably not accurate enough for navigation. I managed to remedy this with the "inject time" option in <a href="https://play.google.com/store/apps/details?id=com.android.gpstest">the Open Source GPS test application</a>. Depending on the model of your phone, there might be different ways here to get better accuracy for your GPS.</p>
-	<p><b>Did you know?</b> The .cf domain name of this website is registered for free at freenom.com. The CF country code is from the Central African Republic, and African, Asian and Middle East countries are some of the places where many streets and houses without official naming and numbering can be found. Google Zürich invented the system used here to enable having an address even when official instances didn't assign any to you. Its usage is fully free (as in free beer, free speech and free software) and the system is really easy to use. The only significant place that doesn't support OLC in any form yet is the official openstreetmap website. I don't endorse blackmailing those people though, they seem to have legitimate reasons not to support it (yet?).</p>
+	<hr />
+	<div id="messages">
+		Here you will see messages of people around you...
+	</div>
+	<div id="source">Although the code is ugly, it's open source. Find it on <a href="https://github.com/lapingvino/olc-tools/">lapingvino/olc-tools</a> on Github.</div>
 	<script src="openlocationcode.min.js"></script>
 	<script>
-if ((!location.port || location.port == "80") && location.protocol != 'https:') {
-  location.protocol = 'https:';
-}
 		document.getElementById("navinput").value=localStorage.getItem(location.pathname) || location.hash.substring(1);
 		nav2default = document.getElementById("nav2").innerHTML;
 		function dist(lat1,lon1,lat2,lon2) {
@@ -121,7 +131,8 @@ function resolve(code, lat, lon) {
 			} else if (acc < 120000) {
 				length = 6;
 			}
-			code = OpenLocationCode.encode(location.coords.latitude, location.coords.longitude, length)
+			code = OpenLocationCode.encode(location.coords.latitude, location.coords.longitude, length);
+			messages('geo'+code.substring(0,6), document.getElementById("messages"));
 			document.getElementById("code").title=code;
 			document.getElementById("region").innerHTML=code.substring(0,4);
 			document.getElementById("local").innerHTML=code.substring(4);
