--- a/whenwhere.cf/precise.html
+++ b/whenwhere.cf/precise.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <title>whenwhere.cf - Dead simple lightweight communication and coordination</title>
 <meta name="viewport" content="initial-scale=0.7">
 <link rel="manifest" href="manifest.json">
@@ -87,25 +88,5 @@ function direction(lat1,long1,lat2,long2) {
 			  timeout: 1000,
 			  maximumAge: 0
 	});
-
-// This is the "Offline copy of pages" service worker
-
-// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
-
-// Check compatibility for the browser we're running this in
-if ("serviceWorker" in navigator) {
-  if (navigator.serviceWorker.controller) {
-    console.log("[PWA Builder] active service worker found, no need to register");
-  } else {
-    // Register the service worker
-    navigator.serviceWorker
-      .register("pwabuilder-sw.js", {
-        scope: "./"
-      })
-      .then(function (reg) {
-        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
-      });
-  }
-}
 
 	</script>
