--- a/whenwhere.uk/index.html
+++ b/whenwhere.uk/index.html
@@ -296,7 +296,7 @@
                 <span id="nav1">Go to:</span>
                 <input
                     id="navinput"
-                    placeholder="Enter OLC (e.g., 8FXC2222+22)"
+                    placeholder="Enter OLC, short code + location, or place name (e.g., 9G8F+6W London)"
                     type="text"
                 />
                 <span id="nav2">(enter OLC)</span>
@@ -321,7 +321,9 @@
                         >reverse lookup</a
                     >
                     to get possible reference points to get people to the right
-                    region first.
+                    region first. You can also enter place names or short codes
+                    with location references (like "9G8F+6W London" or just
+                    "Central Park") which will be geocoded using OpenStreetMap.
                 </p>
                 <p>
                     Want more info?
@@ -402,6 +404,49 @@
                 return r;
             }
 
+            // Geocode using Nominatim API
+            async function geocodeWithNominatim(query) {
+                try {
+                    console.log("Sending Nominatim request for:", query);
+                    const response = await fetch(
+                        `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${encodeURIComponent(query)}`,
+                        {
+                            headers: {
+                                "User-Agent":
+                                    "whenwhere.uk/1.0 (https://whenwhere.uk; contact via GitHub)",
+                            },
+                        },
+                    );
+                    const data = await response.json();
+                    console.log("Nominatim response:", data);
+
+                    if (data && data.length > 0) {
+                        const result = data[0];
+                        const lat = parseFloat(result.lat);
+                        const lon = parseFloat(result.lon);
+                        console.log(
+                            `Nominatim found: ${result.display_name} at ${lat}, ${lon}`,
+                        );
+
+                        // Return in OpenLocationCode decode format
+                        return {
+                            latitudeCenter: lat,
+                            longitudeCenter: lon,
+                            codeLength: 10, // Default length for geocoded results
+                            latitudeLo: lat - 0.000125, // Approximate bounds
+                            latitudeHi: lat + 0.000125,
+                            longitudeLo: lon - 0.000125,
+                            longitudeHi: lon + 0.000125,
+                        };
+                    }
+                    console.log("No results found in Nominatim response");
+                    return null;
+                } catch (e) {
+                    console.warn("Nominatim geocoding error:", e.message);
+                    return null;
+                }
+            }
+
             function resolve(code, lat, lon) {
                 // Ensure code is a string and not empty.
                 if (typeof code !== "string" || code.trim() === "") {
@@ -427,12 +472,109 @@
                 }
             }
 
+            // Parse input to separate potential short code from location reference
+            function parseShortCodeInput(input) {
+                const trimmed = input.trim().toUpperCase();
+
+                // Look for patterns like "9G8F+6W London" or "London 9G8F+6W"
+                const codePattern = /([A-Z0-9]{4,8}\+[A-Z0-9]{2,3})/;
+                const match = trimmed.match(codePattern);
+
+                if (match) {
+                    const code = match[1];
+                    const location = trimmed.replace(codePattern, "").trim();
+                    return { code, location: location || null };
+                }
+
+                // Check if it looks like a short code without location reference
+                if (trimmed.includes("+") && trimmed.length < 8) {
+                    return { code: trimmed, location: null };
+                }
+
+                return null;
+            }
+
+            // Enhanced resolve function with Nominatim-based reference location lookup
+            async function resolveWithGeocoding(code, lat, lon) {
+                console.log(
+                    `Starting resolution for: "${code}" at position ${lat}, ${lon}`,
+                );
+
+                // First try the standard OLC resolve (includes short codes with current position)
+                const olcResult = resolve(code, lat, lon);
+                if (olcResult) {
+                    console.log("Successfully resolved as OLC:", olcResult);
+                    return olcResult;
+                }
+
+                // Parse the input to see if it contains a short code with location reference
+                const parsed = parseShortCodeInput(code);
+
+                if (parsed && parsed.code) {
+                    console.log(
+                        "Detected short code:",
+                        parsed.code,
+                        "with location:",
+                        parsed.location,
+                    );
+
+                    if (parsed.location) {
+                        // Use Nominatim to find reference location for short code resolution
+                        console.log(
+                            "Looking up reference location:",
+                            parsed.location,
+                        );
+                        const referenceResult = await geocodeWithNominatim(
+                            parsed.location,
+                        );
+
+                        if (referenceResult) {
+                            console.log(
+                                "Found reference location, re-attempting short code resolution",
+                            );
+                            const shortCodeResult = resolve(
+                                parsed.code,
+                                referenceResult.latitudeCenter,
+                                referenceResult.longitudeCenter,
+                            );
+                            if (shortCodeResult) {
+                                console.log(
+                                    "Successfully resolved short code with reference location",
+                                );
+                                return shortCodeResult;
+                            }
+                        }
+                    }
+
+                    console.log(
+                        "Short code resolution with reference location failed",
+                    );
+                    return null;
+                }
+
+                // If not a short code, try Nominatim geocoding for place names/addresses
+                console.log(
+                    "Attempting Nominatim geocoding for place name:",
+                    code,
+                );
+                const nominatimResult = await geocodeWithNominatim(code);
+                if (nominatimResult) {
+                    console.log(
+                        "Successfully geocoded place name:",
+                        nominatimResult,
+                    );
+                } else {
+                    console.log("Place name geocoding also failed");
+                }
+                return nominatimResult;
+            }
+
             function deg2rad(deg) {
                 return deg * (Math.PI / 180);
             }
 
             navigator.geolocation.watchPosition(
-                function (position) {
+                async function (position) {
                     if (isCodeInteractionPaused) {
                         // console.log("Code update paused due to user interaction."); // Optional for debugging
                         return; // Skip OLC display updates
@@ -492,7 +634,10 @@
 
                     try {
                         if (navInputValue) {
-                            let destination = resolve(
+                            // Use async resolve with geocoding fallback
+                            document.getElementById("nav2").innerHTML =
+                                "Resolving...";
+                            let destination = await resolveWithGeocoding(
                                 navInputUpper,
                                 coords.latitude,
                                 coords.longitude,
@@ -540,7 +685,7 @@
                                 );
                             } else {
                                 document.getElementById("nav2").innerHTML =
-                                    "(Invalid OLC entered)";
+                                    "(Location not found - invalid OLC or unknown place)";
                                 messages(
                                     "geo" + currentOlc.substring(0, 6),
                                     document.getElementById("messages"),
